qtmobility (1.2.0-2) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Use wildcard architectures:
    - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any

 -- Fathi Boudra <fabo@debian.org>  Tue, 21 Jun 2011 12:47:36 +0200

qtmobility (1.2.0-1) unstable; urgency=low

  * New upstream release.
  * Drop revert_QTMOBILITY-614.patch.
  * Restore icheck and conflicts against icheck package.
  * Update debian/qtmobility-dev.install: add ndefhandlergen and update
    headers.

 -- Fathi Boudra <fabo@debian.org>  Sun, 19 Jun 2011 14:49:12 +0300

qtmobility (1.2.0~beta0+git3174-2) unstable; urgency=high

  * Do not ship /usr/bin/icheck for now. (Closes: #617725)
  * Urgency=high, transition stuff.

 -- Modestas Vainius <modax@debian.org>  Thu, 24 Mar 2011 15:36:18 +0200

qtmobility (1.2.0~beta0+git3174-1) unstable; urgency=low

  * New upstream snapshot based on master branch - Upload to Sid.
  * Remove patches:
    - ftbfs_multimedia_examples.patch - fixed upstream.
    - enable_pkgconfig_support.patch - fixed upstream.
    - qmf_2010w36_support.patch - merged upstream.
  * Add patches:
    - revert_QTMOBILITY-614.patch: revert commit 0fd9fc9 - It breaks 3rd party
      applications build.
  * Update debian/control:
    - add libblkid-dev and libudev-dev build dependencies.
    - move hal dependency to suggests.
    - add libdeclarative-connectivity, libdeclarative-feedback,
      libdeclarative-organizer and libqtconnectivity1 packages.
  * Update debian/rules:
    - add connectivity to the list of modules.
    - add -languages configure option.
    - remove pkgconfig fix - pkgconfig files aren't shipped undet Linux.
    - fix executable permissions files.
    - fix typo libs -> lib.
  * Update debian/*.install files.

 -- Fathi Boudra <fabo@debian.org>  Sun, 06 Mar 2011 14:15:40 +0200

qtmobility (1.1.0~beta2-1) experimental; urgency=low

  * New upstream release.
  * Update debian/control:
    - remove libqtwebkit-dev build dependency.