@@ -1,2 +1,2 @@
-usr/lib/libQtContacts.so.*
-usr/lib/qt4/plugins/contacts/libqtcontacts_serviceactionmanager.so
+usr/lib/*/libQtContacts.so.*
+usr/lib/*/qt4/plugins/contacts/libqtcontacts_serviceactionmanager.so
