@@ -1,2 +1,2 @@
-usr/lib/libQtFeedback.so.*
-usr/lib/qt4/plugins/feedback/libqtfeedback_mmk.so
+usr/lib/*/libQtFeedback.so.*
+usr/lib/*/qt4/plugins/feedback/libqtfeedback_mmk.so
