@@ -1,1 +1,1 @@
-usr/lib/libQtGallery.so.*
+usr/lib/*/libQtGallery.so.*
