@@ -1,3 +1,3 @@
-usr/lib/libQtLocation.so.*
-usr/lib/qt4/plugins/geoservices/libqtgeoservices_nokia.so
-usr/lib/qt4/plugins/landmarks/libqtlandmarks_sqlite.so
+usr/lib/*/libQtLocation.so.*
+usr/lib/*/qt4/plugins/geoservices/libqtgeoservices_nokia.so
+usr/lib/*/qt4/plugins/landmarks/libqtlandmarks_sqlite.so
