@@ -1,5 +1,5 @@
-usr/lib/libQtMultimediaKit.so.*
-usr/lib/qt4/plugins/audio/libqtmedia_pulse.so
-usr/lib/qt4/plugins/mediaservice/libqgstengine.so
-usr/lib/qt4/plugins/mediaservice/libqtmedia_v4lengine.so
-usr/lib/qt4/plugins/playlistformats/libqtmultimediakit_m3u.so
+usr/lib/*/libQtMultimediaKit.so.*
+usr/lib/*/qt4/plugins/audio/libqtmedia_pulse.so
+usr/lib/*/qt4/plugins/mediaservice/libqgstengine.so
+usr/lib/*/qt4/plugins/mediaservice/libqtmedia_v4lengine.so
+usr/lib/*/qt4/plugins/playlistformats/libqtmultimediakit_m3u.so
