@@ -1,1 +1,1 @@
-usr/lib/libQtOrganizer.so.*
+usr/lib/*/libQtOrganizer.so.*
