@@ -1,1 +1,1 @@
-usr/lib/libQtPublishSubscribe.so.*
+usr/lib/*/libQtPublishSubscribe.so.*
