@@ -1,1 +1,1 @@
-usr/lib/libQtServiceFramework.so.*
+usr/lib/*/libQtServiceFramework.so.*
