@@ -1,1 +1,1 @@
-usr/lib/libQtSystemInfo.so.*
+usr/lib/*/libQtSystemInfo.so.*
