@@ -1,3 +1,3 @@
-usr/lib/libQtVersit.so.*
-usr/lib/qt4/plugins/versit/libqtversit_backuphandler.so
-usr/lib/qt4/plugins/versit/libqtversit_vcardpreserver.so
+usr/lib/*/libQtVersit.so.*
+usr/lib/*/qt4/plugins/versit/libqtversit_backuphandler.so
+usr/lib/*/qt4/plugins/versit/libqtversit_vcardpreserver.so
