@@ -1,1 +1,1 @@
-usr/lib/libQtVersitOrganizer.so.*
+usr/lib/*/libQtVersitOrganizer.so.*
