@@ -456,33 +456,33 @@ usr/include/QtVersitOrganizer/QVersitOrganizerHandlerFactory
 usr/include/QtVersitOrganizer/QVersitOrganizerImporter
 usr/include/QtVersitOrganizer/QVersitOrganizerImporterPropertyHandler
 usr/include/QtVersitOrganizer/QVersitTimeZoneHandler
-usr/lib/libQtConnectivity.prl
-usr/lib/libQtConnectivity.so
-usr/lib/libQtContacts.prl
-usr/lib/libQtContacts.so
-usr/lib/libQtFeedback.prl
-usr/lib/libQtFeedback.so
-usr/lib/libQtGallery.prl
-usr/lib/libQtGallery.so
-usr/lib/libQtLocation.prl
-usr/lib/libQtLocation.so
-usr/lib/libQtMessaging.prl
-usr/lib/libQtMessaging.so
-usr/lib/libQtMultimediaKit.prl
-usr/lib/libQtMultimediaKit.so
-usr/lib/libQtOrganizer.prl
-usr/lib/libQtOrganizer.so
-usr/lib/libQtPublishSubscribe.prl
-usr/lib/libQtPublishSubscribe.so
-usr/lib/libQtSensors.prl
-usr/lib/libQtSensors.so
-usr/lib/libQtServiceFramework.prl
-usr/lib/libQtServiceFramework.so
-usr/lib/libQtSystemInfo.prl
-usr/lib/libQtSystemInfo.so
-usr/lib/libQtVersit.prl
-usr/lib/libQtVersit.so
-usr/lib/libQtVersitOrganizer.prl
-usr/lib/libQtVersitOrganizer.so
+usr/lib/*/libQtConnectivity.prl
+usr/lib/*/libQtConnectivity.so
+usr/lib/*/libQtContacts.prl
+usr/lib/*/libQtContacts.so
+usr/lib/*/libQtFeedback.prl
+usr/lib/*/libQtFeedback.so
+usr/lib/*/libQtGallery.prl
+usr/lib/*/libQtGallery.so
+usr/lib/*/libQtLocation.prl
+usr/lib/*/libQtLocation.so
+usr/lib/*/libQtMessaging.prl
+usr/lib/*/libQtMessaging.so
+usr/lib/*/libQtMultimediaKit.prl
+usr/lib/*/libQtMultimediaKit.so
+usr/lib/*/libQtOrganizer.prl
+usr/lib/*/libQtOrganizer.so
+usr/lib/*/libQtPublishSubscribe.prl
+usr/lib/*/libQtPublishSubscribe.so
+usr/lib/*/libQtSensors.prl
+usr/lib/*/libQtSensors.so
+usr/lib/*/libQtServiceFramework.prl
+usr/lib/*/libQtServiceFramework.so
+usr/lib/*/libQtSystemInfo.prl
+usr/lib/*/libQtSystemInfo.so
+usr/lib/*/libQtVersit.prl
+usr/lib/*/libQtVersit.so
+usr/lib/*/libQtVersitOrganizer.prl
+usr/lib/*/libQtVersitOrganizer.so
 usr/share/qt4/mkspecs/features/mobility.prf
 usr/share/qt4/mkspecs/features/mobilityconfig.prf
