@@ -1,8 +1,8 @@
-usr/lib/qt4/plugins/sensors/libqtsensors_grueplugin.so
-usr/lib/qt4/plugins/serviceframework/libserviceframework_bluetoothtransferplugin.so
-usr/lib/qt4/plugins/serviceframework/libserviceframework_filemanagerplugin.so
-usr/lib/qt4/plugins/serviceframework/libserviceframework_landlinedialerservice.so
-usr/lib/qt4/plugins/serviceframework/libserviceframework_notesmanagerplugin.so
-usr/lib/qt4/plugins/serviceframework/libserviceframework_voipdialerservice.so
+usr/lib/*/qt4/plugins/sensors/libqtsensors_grueplugin.so
+usr/lib/*/qt4/plugins/serviceframework/libserviceframework_bluetoothtransferplugin.so
+usr/lib/*/qt4/plugins/serviceframework/libserviceframework_filemanagerplugin.so
+usr/lib/*/qt4/plugins/serviceframework/libserviceframework_landlinedialerservice.so
+usr/lib/*/qt4/plugins/serviceframework/libserviceframework_notesmanagerplugin.so
+usr/lib/*/qt4/plugins/serviceframework/libserviceframework_voipdialerservice.so
 usr/lib/qtmobility/demos/
 usr/lib/qtmobility/examples/
