@@ -4,7 +4,16 @@ qtmobility (1.2.0-2) UNRELEASED; urgency=low
   * Use wildcard architectures:
     - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
 
- -- Fathi Boudra <fabo@debian.org>  Tue, 21 Jun 2011 12:47:36 +0200
+  [ Fathi Boudra ]
+  * Convert the package to multiarch:
+    - bump build dependency on debhelper >= 8.1.3~.
+    - bump build dependency on libqt4-dev and libqt4-opengl-dev >= 4:4.7.4~.
+    - add Multi-Arch: same and Pre-Depends: ${misc:Pre-Depends} fields to
+      shared libraries packages.
+    - update installed files to multiarch paths.
+    - add support for DEB_HOST_MULTIARCH, needed for libdir and plugindir.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 23 Sep 2011 09:29:49 +0300
 
 qtmobility (1.2.0-1) unstable; urgency=low
 
